--- a/public/plugins/react/view/public/vue.html
+++ b/public/plugins/react/view/public/vue.html
@@ -2,4 +2,5 @@
 <script type="text/javascript" src="__STATIC__/js/jquery.js"></script>
 <script type="text/javascript" src="__STATIC__/vue/vue.min.js"></script>
 <script type="text/javascript" src="__STATIC__/iview/iview.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+<script src="__STATIC__/vue/axios.min.js"></script>
