--- a/public/plugins/react/view/admin_react/prop.html
+++ b/public/plugins/react/view/admin_react/prop.html
@@ -52,7 +52,7 @@
         <i-table border :columns="columns7" :data="data6"></i-table>
         <i-form ref="formInline" :model="formItem" :label-width="80">                    
             <form-item label="上级文件">
-                <i-input v-model="formItem.fileid" name="fileid" placeholder=""></i-input>
+                <i-input v-model="formItem.fileid" name="fileid" placeholder="" ></i-input>
             </form-item>
             <form-item label="参数名称">
                 <i-input v-model="formItem.name_en" name="name_en" placeholder="以字母开头"></i-input>
@@ -90,7 +90,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label"><span class="form-required">*</span>上级文件</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="fileid" value="">
+                <input type="text" class="form-control" name="fileid" value="{$rid}">
             </div>
         </div>
         <div class="form-group">
@@ -182,6 +182,7 @@
                 value: "6"
             }],
             formItem: {
+                fileid:'{$rid}',
                 name_en: '',
                 name_zh: '',
                 formtype: '0',
@@ -198,11 +199,23 @@
                         key: 'name_zh'
                     },
                     {
-                        title: 'Address',
-                        key: 'address'
+                        title: '输入方式',
+                        key: 'formtype'
                     },
                     {
-                        title: 'Action',
+                        title: '数值类型',
+                        key: 'valtype'
+                    },
+                    {
+                        title: '是否显示',
+                        key: 'istable'
+                    },
+                    {
+                        title: '宽度',
+                        key: 'width'
+                    },
+                    {
+                        title: '操作',
                         key: 'action',
                         width: 150,
                         align: 'center',
@@ -221,7 +234,7 @@
                                             this.show(params.index)
                                         }
                                     }
-                                }, 'View'),
+                                }, '查看'),
                                 h('Button', {
                                     props: {
                                         type: 'error',
@@ -232,33 +245,12 @@
                                             this.remove(params.index)
                                         }
                                     }
-                                }, 'Delete')
+                                }, '删除')
                             ]);
                         }
                     }
                 ],
-                data6: [
-                    {
-                        name_en: 'John Brown',
-                        age: 18,
-                        address: 'New York No. 1 Lake Park'
-                    },
-                    {
-                        name_en: 'Jim Green',
-                        age: 24,
-                        address: 'London No. 1 Lake Park'
-                    },
-                    {
-                        name_en: 'Joe Black',
-                        age: 30,
-                        address: 'Sydney No. 1 Lake Park'
-                    },
-                    {
-                        name_en: 'Jon Snow',
-                        age: 26,
-                        address: 'Ottawa No. 2 Lake Park'
-                    }
-                ]
+                data6: []
         },
         methods: {
             show: function() {
@@ -269,17 +261,17 @@
             },
             handleSubmit(name) {
                 var s = this;
-                //console.log("test",this.formItem)
-                this.$refs[name].validate((valid) => {
+                s.$refs[name].validate((valid) => {
                     if (valid) {
-                        this.$Message.success('Success!');
+                        s.$Message.success('Success!');
                     } else {
-                        this.$Message.error('Fail!');
+                        s.$Message.error('Fail!');
                     }
-                })
+                });
+                var sendurl="{:cmf_plugin_url('React://AdminIndex/addPost')}";
                 axios({
                     method:'get',
-                    url:'{:cmf_plugin_url('React://AdminIndex/addPost')}',
+                    url:sendurl,
                     params:{
                         fileid: s.formItem.fileid,
                         name_en: s.formItem.name_en,
@@ -292,26 +284,27 @@
                     }
                 }).then(function(resp){
                     console.log(resp.data);
+                    s.$Message.success(resp.data.msg);
+                    s.getlistData({$rid});
                 }).catch(resp => {
                     console.log('请求失败：'+resp.status+','+resp.statusText);
                 });
             },
             getlistData(rid){
                 var s = this;
+                var sendurl="{:cmf_plugin_url('React://AdminIndex/getlistdata')}";
                 axios({
                     method:'get',
-                    url:'{:cmf_plugin_url('React://AdminIndex/getlistdata')}',
+                    url:sendurl,
                     params:{
                         fileid: rid,
                     }
                 }).then(function(resp){
                     //console.log(resp.data);
-                    s.data6=resp.data.list;                    
+                    s.data6=resp.data.list; //更新数据                  
                 }).catch(resp => {
                     console.log('请求失败：'+resp.status+','+resp.statusText);
-                });
-                //this.data6=newdata;
-                
+                });                
             }
         },
         mounted(){//页面加载完成后显示
