--- a/public/plugins/react/view/admin_react/prop.html
+++ b/public/plugins/react/view/admin_react/prop.html
@@ -13,135 +13,49 @@
         <li><a href="{:cmf_plugin_url('React://AdminIndex/index')}">应用管理</a></li>
         <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/add')}">添加应用</a></li>
     </ul>
-    <div>当前文件：{$descoration}({$filename}{$postfixname})</div>
-    <div class="table_list">
-        <table width="100%" class="table table-hover">
-            <thead>
-                <tr>
-                    <th width="120">字段名称</th>
-                    <th>中文名称</th>
-                    <th>输入类型</th>
-                    <th>数值类型</th>
-                    <th>是否显示</th>
-                    <th>宽度</th>
-                    <th>操作</th>
-                </tr>
-            </thead>
-        
-            <tbody>
-                <foreach name="alldata" item="vo">
-                <tr>
-                    <td>{$vo.name_en}</td>
-                    <td>{$vo.name_zh}</td>
-                    <td>{$vo.formtype}</td>
-                    <td>{$vo.valtype}</td>
-                    <td>{$vo.istable}</td>
-                    <td>{$vo.width}</td>
-                    <td>
-                        <a href="javascript:;">修改</a>|
-                        <a href="javascript:;" class="js-ajax-delete">删除</a>
-                    </td>              
-                </tr>
-                </foreach>
-            </tbody>
-        </table>
-    </div>
     <div id="app">
+        <div class="ivu-card-head">
+            当前文件：{$descoration}({$filename}{$postfixname})            
+        </div>
         <i-button type="primary" @click="add">创建属性</i-button>
         <p>&nbsp;{$rid}-<span>{{msg}}</span></p>
-        <i-table border :columns="columns7" :data="data6"></i-table>
-        <i-form ref="formInline" :model="formItem" :label-width="80">                    
-            <form-item label="上级文件">
-                <i-input v-model="formItem.fileid" name="fileid" placeholder="" ></i-input>
-            </form-item>
-            <form-item label="参数名称">
-                <i-input v-model="formItem.name_en" name="name_en" placeholder="以字母开头"></i-input>
-            </form-item>
-            <form-item label="参数备注">
-                <i-input v-model="formItem.name_zh" placeholder="中文名称，用于注释和表单名称"></i-input>
-            </form-item>
-            <form-item label="输入类型">
-                <i-select v-model="formItem.formtype" name="formtype">
-                    <i-option v-for="item in formtypeData" :value="item.value">{{item.label}}</i-option>
-                </i-select>
-            </form-item>
-            <form-item label="数值类型">
-                <i-select v-model="formItem.valtype" name="valtype">
-                    <i-option v-for="item in valueData" :value="item.value">{{item.label}}</i-option>
-                </i-select>
-            </form-item>
-            <form-item label="默认数值">
-                <i-input v-model="formItem.values" name="values" placeholder="默认为空"></i-input>
-            </form-item>
-            <form-item label="是否显示">
-                <i-input v-model="formItem.istable" name="istable" placeholder="默认为空" :value="1"></i-input>
-            </form-item>
-            <form-item label="宽度">
-                <i-input v-model="formItem.width" name="width" placeholder="默认为空"></i-input>
-            </form-item>                    
-            <form-item>                        
-                <input type="button" class="ivu-btn ivu-btn-submit" @click="handleSubmit('formInline')" value="提交">
-            </form-item>
-        </i-form>
+        <i-table border :columns="columns7" :data="listdata"></i-table>
+        <Modal v-model="modal1" 
+        @on-ok="save"
+        >
+            <i-form ref="formInline" :model="formItem" :label-width="80">
+                <form-item label="上级文件">
+                    <i-input v-model="formItem.fileid" name="fileid" placeholder="" ></i-input>
+                </form-item>
+                <form-item label="参数名称">
+                    <i-input v-model="formItem.name_en" name="name_en" placeholder="以字母开头"></i-input>
+                </form-item>
+                <form-item label="参数备注">
+                    <i-input v-model="formItem.name_zh" placeholder="中文名称，用于注释和表单名称"></i-input>
+                </form-item>
+                <form-item label="输入类型">
+                    <i-select v-model="formItem.formtype" name="formtype">
+                        <i-option v-for="item in formtypeData" :value="item.value">{{item.label}}</i-option>
+                    </i-select>
+                </form-item>
+                <form-item label="数值类型">
+                    <i-select v-model="formItem.valtype" name="valtype">
+                        <i-option v-for="item in valueData" :value="item.value">{{item.label}}</i-option>
+                    </i-select>
+                </form-item>
+                <form-item label="默认数值">
+                    <i-input v-model="formItem.values" name="values" placeholder="默认为空"></i-input>
+                </form-item>
+                <form-item label="是否显示">
+                    <i-input v-model="formItem.istable" name="istable" placeholder="默认为空" :value="1"></i-input>
+                </form-item>
+                <form-item label="宽度">
+                    <i-input v-model="formItem.width" name="width" placeholder="默认为空"></i-input>
+                </form-item>
+            </i-form>
+        </Modal>
     </div>
-    <form method="get" class="form-horizontal js-ajax-form margin-top-20"
-          action="{:cmf_plugin_url('React://AdminIndex/addPost')}">
 
-        <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>上级文件</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="fileid" value="{$rid}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>英文名称</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="name_en" value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>中文名称</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="name_zh" value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>formtype</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="formtype" value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">valtype</label>
-            <div class="col-md-6 col-sm-10">
-                <div class="">
-                    
-                        <input type="text" name="valtype" value="1">
-                   
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">values</label>
-            <div class="col-md-6 col-sm-10">
-                <div class="">
-                    
-                        <input type="text" name="values" value="1">
-                    
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>单元格宽度</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="width" value="">
-            </div>
-        </div>
-
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary js-ajax-submit">{:lang("SAVE")}</button>
-        </div>
-    </form>
 </div>
 <script>
     new Vue({
@@ -149,6 +63,8 @@
         data: {
             visible: false,
             msg:"加载前",
+            modal1: false,
+            currentIndex:'',
             valueData: [{
                 label: "字符型",
                 value: "0"
@@ -189,75 +105,102 @@
                 valtype: '0',
                 values: '',                
             },
-                columns7: [
-                    {
-                        title: '参数名',
-                        key: 'name_en',
-                    },
-                    {
-                        title: '中文名称',
-                        key: 'name_zh'
-                    },
-                    {
-                        title: '输入方式',
-                        key: 'formtype'
-                    },
-                    {
-                        title: '数值类型',
-                        key: 'valtype'
-                    },
-                    {
-                        title: '是否显示',
-                        key: 'istable'
-                    },
-                    {
-                        title: '宽度',
-                        key: 'width'
-                    },
-                    {
-                        title: '操作',
-                        key: 'action',
-                        width: 150,
-                        align: 'center',
-                        render: (h, params) => {
-                            return h('div', [
-                                h('Button', {
-                                    props: {
-                                        type: 'primary',
-                                        size: 'small'
-                                    },
-                                    style: {
-                                        marginRight: '5px'
-                                    },
-                                    on: {
-                                        click: () => {
-                                            this.show(params.index)
-                                        }
+            columns7: [
+                {
+                    title: '参数名',
+                    key: 'name_en',
+                },
+                {
+                    title: '中文名称',
+                    key: 'name_zh'
+                },
+                {
+                    title: '输入方式',
+                    key: 'formtype'
+                },
+                {
+                    title: '数值类型',
+                    key: 'valtype'
+                },
+                {
+                    title: '是否显示',
+                    key: 'istable'
+                },
+                {
+                    title: '宽度',
+                    key: 'width'
+                },
+                {
+                    title: '操作',
+                    key: 'action',
+                    width: 180,
+                    align: 'center',
+                    render: (h, params) => {
+                        var s=this;
+                        return h('div', [
+                            h('Button', {
+                                props: {
+                                    type: 'text',
+                                    size: 'small'
+                                },
+                                style: {
+                                    marginRight: '5px'
+                                },
+                                on: {
+                                    click: () => {
+                                        this.show(params.index)
                                     }
-                                }, '查看'),
-                                h('Button', {
-                                    props: {
-                                        type: 'error',
-                                        size: 'small'
-                                    },
-                                    on: {
-                                        click: () => {
-                                            this.remove(params.index)
-                                        }
+                                }
+                            }, '查看'),
+                            h('Button', {
+                                props: {
+                                    type: 'text',
+                                    size: 'small'
+                                },
+                                style: {
+                                    marginRight: '5px'
+                                },
+                                on: {
+                                    click: () => {
+                                        s.show(params.row.rid);
                                     }
-                                }, '删除')
-                            ]);
-                        }
+                                }
+                            }, '修改'),
+                            h('Button', {
+                                props: {
+                                    type: 'text',
+                                    size: 'small'
+                                },
+                                on: {
+                                    click: () => {
+                                        this.remove(params.index)
+                                    }
+                                }
+                            }, '删除')
+                        ]);
                     }
+                }
                 ],
-                data6: []
+                listdata: []
         },
         methods: {
             show: function() {
                 this.visible = true;
             },
             add:function(){
-                window.location.href='add.html'
+                var s = this;
+                s.modal1=true;
+            },
+            edit:function(rid){
+                var s = this;
+                s.modal1=true;
+                s.currentIndex=rid;
+                console.log(s.currentIndex);
+            },
+            save:function(){
+                var s = this;
+
+                s.handleSubmit('formInline');
             },
             handleSubmit(name) {
                 var s = this;
@@ -284,6 +227,7 @@
                     }
                 }).then(function(resp){
                     console.log(resp.data);
+                    s.modal1=false;
                     s.$Message.success(resp.data.msg);
                     s.getlistData({$rid});
                 }).catch(resp => {
@@ -301,11 +245,11 @@
                     }
                 }).then(function(resp){
                     //console.log(resp.data);
-                    s.data6=resp.data.list; //更新数据                  
+                    s.listdata=resp.data.list; //更新数据                  
                 }).catch(resp => {
                     console.log('请求失败：'+resp.status+','+resp.statusText);
                 });                
-            }
+            },
         },
         mounted(){//页面加载完成后显示
             this.getlistData({$rid});            
