--- a/public/plugins/react/view/admin_react/prop.html
+++ b/public/plugins/react/view/admin_react/prop.html
@@ -17,7 +17,7 @@
         <div class="ivu-card-head">
             当前文件：{$descoration}({$filename}{$postfixname})            
         </div>
-        <i-button type="primary" @click="add">创建属性</i-button>
+        <i-button type="primary" @click="open">创建属性</i-button>
         <p>&nbsp;{$rid}-<span>{{msg}}</span></p>
         <i-table border :columns="columns7" :data="listdata"></i-table>
         <Modal v-model="modal1" 
@@ -25,7 +25,7 @@
         >
             <i-form ref="formInline" :model="formItem" :label-width="80">
                 <form-item label="上级文件">
-                    <i-input v-model="formItem.fileid" name="fileid" placeholder="" ></i-input>
+                    <i-input v-model="formItem.fileid" name="fileid" disabled ></i-input>
                 </form-item>
                 <form-item label="参数名称">
                     <i-input v-model="formItem.name_en" name="name_en" placeholder="以字母开头"></i-input>
@@ -103,7 +103,9 @@
                 name_zh: '',
                 formtype: '0',
                 valtype: '0',
-                values: '',                
+                values: '',
+                istable:'1',
+                width:'',              
             },
             columns7: [
                 {
@@ -136,7 +138,7 @@
                     width: 180,
                     align: 'center',
                     render: (h, params) => {
-                        var s=this;
+                        
                         return h('div', [
                             h('Button', {
                                 props: {
@@ -147,22 +149,8 @@
                                     marginRight: '5px'
                                 },
                                 on: {
-                                    click: () => {
-                                        this.show(params.index)
-                                    }
-                                }
-                            }, '查看'),
-                            h('Button', {
-                                props: {
-                                    type: 'text',
-                                    size: 'small'
-                                },
-                                style: {
-                                    marginRight: '5px'
-                                },
-                                on: {
-                                    click: () => {
-                                        s.show(params.row.rid);
+                                    'click': () => {
+                                        that.show(params.row.rid);
                                     }
                                 }
                             }, '修改'),
@@ -173,34 +161,106 @@
                                 },
                                 on: {
                                     click: () => {
-                                        this.remove(params.index)
+                                        that.remove(params.index)
                                     }
                                 }
                             }, '删除')
                         ]);
+                        
                     }
                 }
                 ],
                 listdata: []
         },
         methods: {
-            show: function() {
-                this.visible = true;
-            },
-            add:function(){
-                var s = this;
-                s.modal1=true;
-            },
-            edit:function(rid){
+            show(rid) {
                 var s = this;
                 s.modal1=true;
                 s.currentIndex=rid;
-                console.log(s.currentIndex);
+                s.listdata.map(function(item, index) {
+                    if(item.rid==rid){
+                        //return console.log(item.name_en);
+                        s.formItem={
+                            rid:item.rid,
+                            fileid:'{$rid}',
+                            name_en: item.name_en,
+                            name_zh: item.name_zh,
+                            formtype: String(item.formtype),
+                            valtype: String(item.valtype),
+                            values: item.values,
+                            istable:item.istable,
+                            width:item.width,              
+                        }
+                    }                    
+                })
+            },
+            open:function(){
+                var s = this;
+                s.modal1=true;
+                s.formItem={
+                    fileid:'{$rid}',
+                    name_en: '',
+                    name_zh: '',
+                    formtype: '0',
+                    valtype: '0',
+                    values: '',
+                    istable:'1',
+                    width:''            
+                }
+            },
+            edit:function(rid){
+                var s = this;
+                /*s.modal1=true;
+                s.currentIndex=rid;
+                s.listdata.map(function(item, index) {
+                    if(item.rid==rid){
+                        //return console.log(item.name_en);
+                        s.formItem={
+                            fileid:'{$rid}',
+                            name_en: item.name_en,
+                            name_zh: item.name_zh,
+                            formtype: String(item.formtype),
+                            valtype: String(item.valtype),
+                            values: item.values,
+                            istable:item.istable,
+                            width:item.width,              
+                        }
+                    }                    
+                })*/
+                //console.log(s.currentIndex);
+                var sendurl="{:cmf_plugin_url('React://AdminIndex/editPost')}";
+                axios({
+                    method:'get',
+                    url:sendurl,
+                    params:{
+                        rid:rid,
+                        fileid: s.formItem.fileid,
+                        name_en: s.formItem.name_en,
+                        name_zh: s.formItem.name_zh,
+                        formtype: s.formItem.formtype,
+                        valtype: s.formItem.valtype,
+                        values: s.formItem.values,
+                        istable: s.formItem.istable,
+                        width: s.formItem.width,
+                    }
+                }).then(function(resp){
+                    console.log(resp.data);
+                    s.modal1=false;
+                    s.$Message.success(resp.data.msg);
+                    s.getlistData({$rid});
+                }).catch(resp => {
+                    console.log('请求失败：'+resp.status+','+resp.statusText);
+                });
             },
             save:function(){
                 var s = this;
-
-                s.handleSubmit('formInline');
+                //s.handleSubmit('formInline');
+                if(s.currentIndex!=''){
+                    this.edit(s.currentIndex);
+                }else{
+                    s.handleSubmit('formInline');
+                }
+                this.modal1=false;
             },
             handleSubmit(name) {
                 var s = this;
@@ -253,6 +313,9 @@
         },
         mounted(){//页面加载完成后显示
             this.getlistData({$rid});            
+        },
+        beforeMount(){
+            that = this
         }
     })
     </script>
