--- a/public/plugins/react/view/admin_index.html
+++ b/public/plugins/react/view/admin_index.html
@@ -41,7 +41,9 @@
                     <tbody>
                         <foreach name="filelist" item="vo">
                             <tr>
-                                <td>{$vo.gid}</td>                                
+                                <td>                                    
+                                    {$vo.gid}                                    
+                                </td>                                
                                 <td>{$vo.descoration}</td>
                                 <td>{$vo.filename}</td>
                                 <td>{$vo.postfixname}</td>
