--- a/public/plugins/react/view/admin_index.html
+++ b/public/plugins/react/view/admin_index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="wrap js-check-wrap">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/index')}">应用管理</a></li>
-            <li><a href="{:cmf_plugin_url('React://AdminIndex/filelist')}">添加应用</a></li>
+            <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/index')}">页面管理</a></li>
+            <li><a href="{:cmf_plugin_url('React://AdminIndex/filelist')}">添加页面</a></li>
         </ul>
         <div class="common-form">
             <div class="well">
@@ -92,29 +92,25 @@
                 <!-- vue -->
                 <!--             
     <Modal v-model="visible" title="Welcome">Welcome to iView</Modal> -->
-                <i-button type="primary" @click="add">创建Vue.js模板</i-button>
+                <i-button type="primary" @click="add">创建模板</i-button>
                 <p>&nbsp;</p>
                 <i-form ref="formInline" :model="formItem" :label-width="80">                    
-                    <form-item label="参数名称">
-                        <i-input v-model="formItem.name_en" name="name_en" placeholder="以字母开头"></i-input>
-                        <span>当前值：{{formItem.name_en}}</span>
-                    </form-item>
-                    <form-item label="参数备注">
-                        <i-input v-model="formItem.name_zh" placeholder="中文名称，用于注释和表单名称"></i-input>
-                    </form-item>
-                    <form-item label="表单类型">
-                        <i-select v-model="formItem.formtype" name="formtype">
-                            <i-option v-for="item in formtypeData" :value="item.value">{{item.label}}</i-option>
+                    <form-item label="所属项目">                        
+                        <i-select v-model="formItem.gid" name="gid">
+                            <foreach name="alltype" item="vo">
+                            <i-option :value="{$vo.id}">{$vo.names}</i-option>
+                            </foreach>
                         </i-select>
                     </form-item>
-                    <form-item label="数值类型">
-                        <i-select v-model="formItem.valtype" name="valtype">
-                            <i-option v-for="item in valueData" :value="item.value">{{item.label}}</i-option>
-                        </i-select>
+                    <form-item label="文件名">
+                        <i-input v-model="formItem.filename" name="filename"></i-input>
                     </form-item>
-                    <form-item label="默认数值">
-                        <i-input v-model="formItem.values" name="values" placeholder="默认为空"></i-input>
-                    </form-item>                    
+                    <form-item label="中文名称">
+                        <i-input v-model="formItem.descoration" name="descoration"></i-input>
+                    </form-item>
+                    <form-item label="文件后缀">
+                        <i-input v-model="formItem.postfixname" name="postfixname"></i-input>
+                    </form-item>                  
                     <form-item>                        
                         <input type="button" class="ivu-btn ivu-btn-submit" @click="handleSubmit('formInline')" value="提交">
                     </form-item>
@@ -161,11 +157,10 @@
                 value: "6"
             }],
             formItem: {
-                name_en: '',
-                name_zh: '',
-                formtype: '0',
-                valtype: '0',
-                values: '',
+                gid: '',
+                filename: '',
+                descoration: '',
+                postfixname: '.vue',
                 
             }
         },
@@ -178,26 +173,27 @@
             },
             handleSubmit(name) {
                 var s = this;
-                console.log("test",this.formItem)
-                this.$refs[name].validate((valid) => {
+                console.log("test",this.formItem);
+                var sendurl="{:cmf_plugin_url('React://AdminIndex/addfile')}";
+                /*this.$refs[name].validate((valid) => {
                     if (valid) {
                         this.$Message.success('Success!');
                     } else {
                         this.$Message.error('Fail!');
                     }
-                })
+                })*/
                 axios({
                     method:'get',
-                    url:'{:cmf_plugin_url('React://AdminIndex/addPost')}',
+                    url:sendurl,
                     params:{
-                        name_en: s.formItem.name_en,
-                        name_zh: s.formItem.name_zh,
-                        formtype: s.formItem.formtype,
-                        valtype: s.formItem.valtype,
-                        values: s.formItem.values,
+                        gid: s.formItem.gid,
+                        filename: s.formItem.filename,
+                        descoration: s.formItem.descoration,
+                        postfixname: s.formItem.postfixname,
                     }
                 }).then(function(resp){
                     console.log(resp.data);
+                    s.$Message.success(resp.data.msg);
                 }).catch(resp => {
                     console.log('请求失败：'+resp.status+','+resp.statusText);
                 });
