--- a/public/plugins/react/view/admin_react/filelist.html
+++ b/public/plugins/react/view/admin_react/filelist.html
@@ -10,15 +10,19 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:cmf_plugin_url('React://AdminIndex/index')}">React应用管理</a></li>
-        <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/add')}">添加应用</a></li>
+        <li><a href="{:cmf_plugin_url('React://AdminIndex/index')}">页面管理</a></li>
+        <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/add')}">添加页面</a></li>
     </ul>
     <form method="get" class="form-horizontal js-ajax-form margin-top-20"
           action="{:cmf_plugin_url('React://AdminIndex/addfile')}">
         <div class="form-group">
             <label class="col-sm-2 control-label"><span class="form-required">*</span>所属项目</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="gid" value="">
+                <select name="gid">
+                    <foreach name="reactgroup" item="vo">
+                        <option value="{$vo.id}">{$vo.names}</option>
+                    </foreach>
+                </select>
             </div>
         </div>
         <div class="form-group">
