--- a/public/plugins/react/view/admin_index.html
+++ b/public/plugins/react/view/admin_index.html
@@ -48,7 +48,7 @@
                                 <td>{$vo.filename}</td>
                                 <td>{$vo.postfixname}</td>
                                 <td>
-                                    <a href="{:cmf_plugin_url('React://AdminIndex/prop',array('rid'=>$vo['id'],'filename'=>$vo['filename']))}">属性管理</a>|
+                                    <a href="{:cmf_plugin_url('React://AdminIndex/prop',array('rid'=>$vo['id'],'gid'=>$vo['gid'],'filename'=>$vo['filename']))}">属性管理</a>|
                                     <a href="{:cmf_plugin_url('React://AdminIndex/app',array('rid'=>$vo['id'],'filename'=>$vo['filename']))}">应用管理</a>|
                                     <a href="{:cmf_plugin_url('React://AdminIndex/vue',array('rid'=>$vo['id'],'filename'=>$vo['filename']))}">生成文件</a>|
                                     <a href="javascript:;">修改</a>|
