--- a/public/plugins/react/view/admin_index - 副本.html
+++ b/public/plugins/react/view/admin_index - 副本.html
@@ -27,6 +27,38 @@
                     <b>插件模板根目录:</b>__PLUGIN_TMPL__
                 </p>
             </div>
+            <div class="table_list">
+                <table width="100%" class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th width="80">项目ID</th>
+                            <th>页面名称</th>
+                            <th>文件名称</th>
+                            <th>文件后缀</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <foreach name="filelist" item="vo">
+                            <tr>
+                                <td>                                    
+                                    {$vo.gid}                                    
+                                </td>                                
+                                <td>{$vo.descoration}</td>
+                                <td>{$vo.filename}</td>
+                                <td>{$vo.postfixname}</td>
+                                <td>
+                                    <a href="{:cmf_plugin_url('React://AdminIndex/prop',array('rid'=>$vo['id'],'gid'=>$vo['gid'],'filename'=>$vo['filename']))}">属性管理</a>|
+                                    <a href="{:cmf_plugin_url('React://AdminIndex/app',array('rid'=>$vo['id'],'filename'=>$vo['filename']))}">应用管理</a>|
+                                    <a href="{:cmf_plugin_url('React://AdminIndex/vue',array('rid'=>$vo['id'],'filename'=>$vo['filename']))}">生成文件</a>|
+                                    <a href="javascript:;">修改</a>|
+                                    <a href="javascript:;" class="js-ajax-delete">删除</a>
+                                </td>
+                            </tr>
+                        </foreach>
+                    </tbody>
+                </table>
+            </div>
 
             <div id="app">
                 <!-- vue -->
