--- a/public/plugins/react/view/admin_react/app.html
+++ b/public/plugins/react/view/admin_react/app.html
@@ -202,6 +202,7 @@
             open:function(){
                 var s = this;
                 s.modal1=true;
+                s.currentIndex="";
                 s.formItem={
                     classid:'3',
                     fileid:'{$rid}',
