--- a/public/plugins/react/view/admin_react/app.html
+++ b/public/plugins/react/view/admin_react/app.html
@@ -10,15 +10,17 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:cmf_plugin_url('React://AdminIndex/index')}">应用管理</a></li>
-        <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/add')}">添加应用</a></li>
+        <li><a href="{:cmf_plugin_url('React://AdminIndex/index')}">页面管理</a></li>
+        <li class="active"><a href="{:cmf_plugin_url('React://AdminIndex/add')}">添加页面</a></li>
     </ul>
     <div id="app">
-        <div class="ivu-card-head">
-            当前文件：{$descoration}({$filename}{$postfixname})            
+        <p>&nbsp;</p>
+        <div>
+            当前页面：{$descoration}&nbsp;&nbsp;&nbsp;&nbsp;对应文件：{$filename}{$postfixname}         
         </div>
+        <p>&nbsp;</p>
         <i-button type="primary" @click="open">创建应用</i-button>
-        <p>&nbsp;{$rid}-<span>{{msg}}</span></p>
+        <p>&nbsp;</p>
         <i-table border :columns="columns7" :data="listdata"></i-table>
         <Modal v-model="modal1" 
         @on-ok="save"
